# HRRPC

./: .gitignore  README.md  Rrpc.cabal
client/: angular.d.ts  controller.ts  index.ts
rpc_server/: server.r  some_script.r  start_server
src/: Main.hs
static/: index.html
