Name:                HRRPC
Version:             0.0.0
Synopsis:            Prototype RPC layer between Haskell and R
Description:         Project Description Here
License:             AllRightsReserved
Author:              James Hudon <jameshudon@gmail.com>
Maintainer:          James Hudon <jameshudon@gmail.com>
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable HRRPC
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.11,
    snap-server               >= 0.9   && < 0.11,
    transformers              >= 0.3   && < 0.4,
    process                   >= 1     && < 2,
    aeson                     >= 0.6   && < 0.7,
    text                      >= 0.11  && < 0.12,
    utf8-string               >= 0.3   && < 0.4

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
